--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [workspace]
 
-members = ["hello_world", "guessing_game"]
+members = ["hello_world", "guessing_game", "variables", "integer", "compound"
+, "function", "control-flow"]
